<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="km_prechat_processing_wait_info">Please wait, launching conversation..</string>
    <string name="km_whatsapp_restriction">The last message received from this contact was over 24 hours ago. To send Template message, go to the dashboard.</string>
    <string name="km_teammode_restriction">You can no longer send messages to this conversation as it has been assigned to a different team.</string>
    <string name="internet_connection_not_available">No internet connection.</string>
    <string name="you_need_network_access_for_delete">You need to have network access for deleting conversation.</string>
    <string name="km_server_error">Oops! You caught an error, try again later.</string>
    <string name="you_need_network_access_for_block_or_unblock">You need to have network access for block/unblock a user.</string>
    <string name="internet_connection_for_group_name_info">Your phone needs an internet connection to change the group name.</string>
    <string name="you_dont_have_any_network_access_info">You don\'t have any network access now.</string>
    <string name="failed_to_leave_group">Failed to leave group.</string>
    <string name="user_is_already_exists">User already exists in group.</string>
    <string name="delete_conversation_failed">Delete failed.</string>
    <string name="menu_search">Search</string>
    <string name="faq_option">FAQ</string>
    <string name="menu_add_contact">Create a new contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Search..</string>
    <string name="activity_contacts_list">Contact List</string>
    <string name="activity_contacts_title">Select contact</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contact search for \"%s\"</string>
    <string name="contactsListActivity">Contact List</string>
    <string name="phone_number_not_present">Phone number is not present.</string>
    <string name="framework_title_device">Device</string>
    <string name="framework_title_group">Group</string>
    <string name="zero_friends_on_phone">No matching contact found on phone contacts but you can still send message by entering the email, userId or phone number.</string>
    <string name="contact_sync_in_progress">Contact sync is in progress. It might take few minutes.</string>
    <string name="zero_friends_on_app">Contacts were not found.</string>
    <string name="zero_groups_on_app">Groups were not found.</string>
    <string name="delete_thread_text">Deleting..</string>
    <string name="conversation_delete_successful">Conversation has been deleted</string>
    <string name="conversation_delete_failed">Conversation failed to delete</string>
    <string name="search_title">Search</string>
    <string name="km_user_already_in_a_group">Already added to the [groupType].</string>
    <string name="km_contacts_loading_info">Loading please wait..</string>
    <string name="km_contacts_loading_error">You need to have network access for loading contacts.</string>
    <string name="km_enter_group_name">Please enter a group name to proceed..</string>
    <string name="snap_text">Oh Snap!</string>
    <string name="root_text">Your device is rooted!</string>
    <string name="root_device_message">You can\'t use the Kommunicate SDK in this device as it\'s rooted.</string>
    <string name="trial_user_disconnection_message">Trial users cannot access this feature in release mode. \nPlease upgrade your plan to continue. \nFor further assistance, contact support at support@kommunicate.io.</string>
    <string name="mobile_not_supported_message">Your current plan does not support mobile access. \nPlease update your subscription to gain full access.</string>
    <string name="churned_user_disconnection_message">Your app provider needs to renew their subscription to enable access to messaging features.</string>
    <string name="powered_by_kommunicate_message">We are powered by Kommunicate.</string>
    <string name="share_using">Share using</string>
    <string name="warning">Warning</string>
    <string name="cancel_transaction">Do you want to cancel this transaction?</string>
    <string name="go_back">Are you sure you want to exit this page?</string>
    <string name="unable_to_create_conversation">Unable to create conversation.</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="invite">Invite your friends</string>
    <string name="contact_permission">Contact permission are needed to access.</string>
    <string name="storage_permission">Storage permission are needed to access.</string>
    <string name="read_sms_permission">Read sms permission are needed to access.</string>
    <string name="location_permission">Location permission are needed to access.</string>
    <string name="phone_state_permisssion">Phone state permission are needed to access.</string>
    <string name="phone_call_permission">Phone call permission are needed to access.</string>
    <string name="phone_camera_permission">Camera permission are needed to access.</string>
    <string name="record_audio">Audio recording permission needed.</string>
    <string name="camera_audio_permission">Camera and record audio permission are needed to access.</string>
    <string name="contact_permission_not_granted">Permission were not granted for contacts.</string>
    <string name="storage_permission_not_granted">Permissions were not granted for storage.</string>
    <string name="read_sms_permission_not_granted">Permissions were not granted for read.</string>
    <string name="location_permission_not_granted">Permissions were not granted for location.</string>
    <string name="phone_state_permission_not_granted">Permissions were not granted for phone state.</string>
    <string name="phone_call_permission_not_granted">Permission were not granted for phone call.</string>
    <string name="phone_camera_permission_not_granted">Permission were not granted for camera.</string>
    <string name="record_audio_permission_not_granted">Permissions were not granted for audio recording.</string>
    <string name="audio_or_camera_permission_not_granted">Permission were not granted for camera or audio recording.</string>
    <string name="contact_permission_granted">Contacts permission have been granted.</string>
    <string name="storage_permission_granted">Storage Permissions have been granted.</string>
    <string name="read_sms_permission_granted">Read sms Permissions have been granted.</string>
    <string name="location_permission_granted">Location Permissions has been granted.</string>
    <string name="phone_state_permission_granted">Phone state Permissions has been granted.</string>
    <string name="phone_call_permission_granted">Phone call Permission has been granted.</string>
    <string name="phone_camera_permission_granted">Camera permission has been granted.</string>
    <string name="record_audio_permission_granted">Audio Record permissions has been granted.</string>
    <string name="phone_camera_and_audio_permission_granted">Camera and audio permissions has been granted.</string>
    <string name="max_attachment_warning">Max attachment limit reached.</string>
    <string name="no_attachment_warning">No Attachment selected.</string>
    <string name="select_attachment_text">Select at least one attachment.</string>
    <string name="audio_recording_send_text">Tap on Start to record audio.</string>
    <string name="km_audio_permission_missing">Unable to launch audio recorder.</string>
    <string name="km_message_info">Message Info</string>
    <string name="km_message_info_no_network">Not able to fetch message info.</string>
    <string name="km_user_profile_heading">Profile</string>
    <string name="send_message_to">Send to..</string>
    <string name="info_attachment_max_allowed_file_size_exceeded">Can\'t send maximum uploading file size limit exceeded </string>
    <string name="group_members_limit_exceeds">Limit reached, remove someone from the Group first</string>
    <string name="please_wait_creating_group_of_two">Please wait...</string>
    <string name="wait">Wait</string>
    <string name="sort_contacts_by_lastSeenAt">Sort by lastSeen</string>
    <string name="sort_contacts_by_recent_chats">Sort by recent chats</string>
    <string name="logout_info_text">"Logging out, please wait..."</string>
    <string name="create_conversation_info">Creating conversation, please wait...</string>
    <string name="chats">Chats</string>
    <string name="refresh">Refresh</string>
    <string name="start_New">Start New</string>
    <string name="dial">Dial</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="gallery">Gallery</string>
    <string name="camera_option">Camera</string>
    <string name="logout">Logout</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="delete_for_all">Delete for All</string>
    <string name="resend">Resend</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="reply">Reply</string>
    <string name="self_destruct">Self Destruct</string>
    <string name="off">Off</string>
    <string name="one_min">1 min</string>
    <string name="two_min">2 min</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="sms">SMS</string>
    <string name="mt">MT</string>
    <string name="Delete_conversation">Delete conversation</string>
    <string name="delete_group">Delete group</string>
    <string name="exit_group">Exit group</string>
    <string name="message">Message</string>
    <string name="remove">Remove</string>
    <string name="make_group_admin">Make group admin</string>
    <string name="take_photo">Take photo</string>
    <string name="attach_file">Attach file</string>
    <string name="audio_message">Audio Message</string>
    <string name="video_message">Video Message</string>
    <string name="share_contact">Share Contact</string>
    <string name="attach_price">Attach price</string>
    <string name="al_location">:location</string>
    <string name="al_file">:file</string>
    <string name="al_audio">:audio</string>
    <string name="al_camera">:camera</string>
    <string name="al_video">:video</string>
    <string name="al_contact">:contact</string>
    <string name="al_price">:price</string>
    <string name="remove_image">Remove image</string>
    <string name="km_active_bots_text">Active bot:</string>
    <string name="km_default_assigned_bot_name">Support Bot</string>
    <string name="km_take_over_from_bot_button_text">Take over from bot</string>
    <string name="have_other_queries">Have other queries?</string>
    <string name="resolved_info_text">This conversation has been marked as resolved.</string>
    <string name="restart_conversation_text">Restart conversation</string>
    <string name="rating_text">You rated the conversation</string>
    <string name="summary">Conversation Summary</string>
    <string name="summary_sample_text">Summary Sample text Summary Sample text Summary Sample text Summary Sample text Summary Sample text Summary Sample text Summary Sample text Summary Sample text Summary Sample text </string>
    <string name="read_more">Read more</string>
    <string name="km_voice_microphone_content_description">Pause or resume voice mode</string>
    <string name="km_voice_close_content_description">Close voice mode</string>
    <string name="km_voice_powered_by">AI Agent powered by Kommunicate</string>
</resources>