<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/Next"
        android:orderInCategory="2"
        android:title="@string/next"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/Done"
        android:orderInCategory="2"
        android:title="@string/done"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:iconifiedByDefault="true"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:iconifiedByDefault="true"
        app:showAsAction="always"/>

</menu>
