<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:gravity="center"
        android:longClickable="false"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/channel_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/km_channel_custom_message"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/conversation_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        android:elevation="0dp"
        android:backgroundTint="#EFEFEF"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:padding="8dp"
                android:text="@string/summary"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/summary_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/summary_sample_text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/summary_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="#313131"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>